--- a/css/modal.css
+++ b/css/modal.css
@@ -6,9 +6,13 @@
   top: 0;
   left: 0;
   z-index: 2000;
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
+}
+
+.modal-container.ativo {
+  display: flex;
 }
 
 .modal {
@@ -31,6 +35,21 @@
   width: 100%;
   padding: .7rem .5rem;
   box-sizing: border-box;
+}
+
+@keyframes modal {
+  from {
+    opacity: 0;
+    transform: translate3d(0, -30px, 0)
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0)
+  }
+}
+
+.ativo .modal {
+  animation: modal .3s forwards;
 }
 
 .fechar {
