--- a/css/geral.css
+++ b/css/geral.css
@@ -295,3 +295,18 @@ body {
   opacity: 1;
   transform: translate3d(0, 0, 0);
 }
+
+[data-semana]::after {
+  display: inline-block;
+  content: '';
+  width: 7px;
+  height: 7px;
+  background: #e54;
+  border-radius: 50%;
+  margin-left: 4px;
+  border: 2px solid black;
+}
+
+[data-semana].aberto::after {
+  background: #3F4;
+}
